<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout" >
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <RadioGroup
        android:id="@+id/tab_rg_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:checked="true"
            android:drawableTop="@drawable/tab_selector_wo"
            android:text="@string/second_hand_house" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_wo"
            android:text="@string/rent_house" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_wo"
            android:text="@string/shake" />

        <RadioButton
            android:id="@+id/tab_rb_4"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_wo"
            android:text="@string/house_price" />
        
        <RadioButton
            android:id="@+id/tab_rb_5"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_wo"
            android:text="@string/find_roommate" />
    </RadioGroup>
    </RelativeLayout>

</RelativeLayout>